
New Features in Taskwarrior 2.4.5

New commands in Taskwarrior 2.4.5

New configuration options in Taskwarrior 2.4.5

Newly deprecated features in Taskwarrior 2.4.5

Removed features in 2.4.5

Known Issues

  - https://bug.tasktools.org/

Taskwarrior has been built and tested on the following configurations:

  * OS X
  * Fedora
  * Ubuntu
  * Debian
  * Arch
  * FreeBSD
  * Cygwin

---

While Taskwarrior has undergone testing, bugs are sure to remain.  If you
encounter a bug, please enter a new issue at:

  https://bug.tasktools.org

Or you can also report the issue in the forums at:

  https://answers.tasktools.org

Or just send a message to:

  support@taskwarrior.org

Thank you.